--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "firebase": "^10.13.0",
     "flickity": "^3.0.0",
     "imagesloaded": "^5.0.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
